<resources>
    <string name="app_name">Android_Remote</string>
    <string name="action_settings">Settings</string>
    <string name="power">Power</string>
    <string name="subs">Subs</string>
    <string name="back">Back</string>
    <string name="up">Up</string>
    <string name="mode">Mode</string>
    <string name="left">Left</string>
    <string name="ok">OK</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="channelup">Ch+</string>
    <string name="volumeup">Vol+</string>
    <string name="channeldown">Ch-</string>
    <string name="volumedown">Vol-</string>
    <string name="mute">Mute</string>
    <string name="remote_ask">Choose a remote</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="send">Send</string>
    <string name="暖">暖</string>
    <string name="湿">湿</string>
    <string name="冷">冷</string>
    <string name="darker">Dark</string>
    <string name="brighter">Bright</string>
    <string name="brightest">Max</string>
    <string name="darkest">Min</string>
    <string name="bedroom">Bedroom</string>
    <string name="living">Living</string>
    <string name="querry">querry</string>
</resources>
