<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/lights_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_gravity="center">

    <!-- Power Switch -->
    <Button
            android:id="@+id/lights_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power"
    />


    <!-- Light+/- -->
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

        <Button
                android:id="@+id/brighter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/brighter"
        />

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2"/>

        <Button
                android:id="@+id/darker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/darker"
        />

    </LinearLayout>


    <!-- Lights Min/Max-->
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

        <Button
                android:id="@+id/brightest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/brightest"
        />

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2"/>

        <Button
                android:id="@+id/darkest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/darkest"
        />

    </LinearLayout>


</LinearLayout>